--- a/index.html
+++ b/index.html
@@ -254,6 +254,12 @@
                 </div>
             </li>
           </ul>
+          <!-- NEW PRODUCT -->
+          <div class="rounded-lg grayLight flex justify-center items-center cursor-pointer shadow-none border-dashed border-2 gap-2 mt-2 py-1">
+            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1.4rem" width="1.4rem" xmlns="http://www.w3.org/2000/svg"><path d="M19 11h-6V5h-2v6H5v2h6v6h2v-6h6z"></path></svg>
+            <p>Nova categoria</p>
+        </div>
+
         </aside>
         <section class="w-3/4">
           <!-- CATEGORY SECTION -->
